feat(tagforward): 改进目标频道验证逻辑并添加欢迎消息功能
- 重构 validateTargetChannelWithTdLib 方法，添加详细的权限验证步骤
- 新增 sendWelcomeMessage 方法用于验证发送权限
- 添加 buildWelcomeMessage 方法支持欢迎消息模板和占位符替换
- 改进错误处理，添加 extractErrorIfPresent 和 handleSendMessageError 方法
- 简化 ForwardScheduler 中的结果检查逻辑，移除对 TdApi.Messages 的特定依赖
- 在 TagBasedForwardingProperties 中添加 welcomeMessage 属性
- 更新 application.yaml 配置以包含欢迎消息模板